# msvc-dll-example

./: CMakeLists.msvc.zero.config.cmake  CMakeLists.txt  CMakeLists.warnings.cmake  build.bat  configure-x64-ninja-vs2022-runtime.bat
src/: CMakeLists.txt  main.cpp  shared.cpp  shared.h
